# magic-lints

./: README.md
linting/: Cargo.toml
linting/alohomora_type_derived/: Cargo.toml
linting/alohomora_type_derived/.cargo/: config.toml
linting/alohomora_type_derived/src/: lib.rs
linting/trait_def/: Cargo.toml
linting/trait_def/src/: lib.rs
linting/trait_derive/: Cargo.toml
linting/trait_derive/src/: alohomora_type.rs  lib.rs
tests/: Cargo.toml
tests/correct_use/: Cargo.toml  build.rs
tests/correct_use/src/: main.rs
tests/incorrect_use/: Cargo.toml  build.rs
tests/incorrect_use/src/: main.rs
