[package]
name = "trait_derive"
version = "0.1.0"
edition = "2021"

[lib]
name = "trait_derive"
proc-macro = true

[dependencies]
attribute-derive = "0.8.1"
proc-macro2 = "1.0.58"
quote = "1.0.27"
syn = { version = "2.0.16", features = [ "full" ] }
trait_def = { version = "0.1.0", path = "../trait_def" }